--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 find_package(SDL3 REQUIRED)
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(
+		${PROJECT_NAME} 
+		main.cpp 
+		renderer.cpp 
+		particles_manager.cpp
+		)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE SDL3::SDL3)
 
