--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(
 		main.cpp 
 		renderer.cpp 
 		particles_manager.cpp
+		particle_mover.cpp
 		)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE SDL3::SDL3)
